traefik/Nginx-K-CDR-Example/ng-middleware-basic-auth.yaml
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ng-auth
spec:
  basicAuth:
    secret: authsecret
