traefik/Nginx-K-CDR-Example/ng-middleware-https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ng-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: 443
